<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".presentation.marvel.detail.MarvelInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/heroImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/prefixRealNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/prefRealName"
            android:textColor="@color/black"
            android:textSize="26dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/realNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/realName"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/prefixTeamTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/prefTeam"
            android:textColor="@color/black"
            android:textSize="26dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/teamTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/team"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/prefixCreatedByTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/prefCreatedBy"
            android:textColor="@color/black"
            android:textSize="26dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/createdByTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/createdBy"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/prefixFirstAppearanceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/prefFirstAppearance"
            android:textColor="@color/black"
            android:textSize="26dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/firstAppearanceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/firstAppearance"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/prefixBioTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/prefBio"
            android:textColor="@color/black"
            android:textSize="26dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bioTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bio"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>

